2013-02-04  David Kilzer  <ddkilzer@apple.com>

        Sort WebKit2 Xcode project file

        * WebKit2.xcodeproj/project.pbxproj:

2013-02-04  Simon Hausmann  <simon.hausmann@digia.com>

        [WK2][Qt] Replace WebPageGroup usage for user scripts with WKPageGroupRef
        https://bugs.webkit.org/show_bug.cgi?id=108651

        Reviewed by Sam Weinig.

        It's straight-forward port towards the C API.

        * UIProcess/API/qt/qquickwebview.cpp:
        (QQuickWebViewPrivate::initialize):
        (readUserScript):
        (QQuickWebViewPrivate::updateUserScripts):
        * UIProcess/API/qt/qquickwebview_p_p.h:
        (QQuickWebViewPrivate):

2013-02-04  Balazs Kelemen  <kbalazs@webkit.org>

        [Soup] Wrap SoupSession by NetworkStorageSession
        https://bugs.webkit.org/show_bug.cgi?id=108615

        Reviewed by Alexey Proskuryakov.

        * WebProcess/WebCoreSupport/soup/WebFrameNetworkingContext.cpp:
        (WebKit::WebFrameNetworkingContext::storageSession):
        * WebProcess/WebCoreSupport/soup/WebFrameNetworkingContext.h:
        (WebFrameNetworkingContext):

2013-02-03  David Kilzer  <ddkilzer@apple.com>

        Upstream ENABLE_PDFKIT_PLUGIN settting
        <http://webkit.org/b/108792>

        Reviewed by Tim Horton.

        * Configurations/FeatureDefines.xcconfig: Disable PDFKIT_PLUGIN
        on iOS since PDFKit is a Mac-only framework.

2013-02-01  Alexey Proskuryakov  <ap@apple.com>

        Silently block one more directory needed for NSApplication initialization.

        Reviewed by Sam Weinig.

        * WebProcess/com.apple.WebProcess.sb.in:

2013-02-03  KwangYong Choi  <ky0.choi@samsung.com>

        Fix build warning after r141648
        https://bugs.webkit.org/show_bug.cgi?id=108784

        Reviewed by Kentaro Hara.

        Fix -Wunused-parameter build warning.

        * UIProcess/Storage/StorageManager.cpp:
        (WebKit::StorageManager::createStorageArea):